<?xml version="1.0" encoding="utf-8"?>
<!--
   - FreeOTP
   -
   - Authors: Nathaniel McCallum <npmccallum@redhat.com>
   -
   - Copyright (C) 2013  Nathaniel McCallum, Red Hat
   -
   - Licensed under the Apache License, Version 2.0 (the "License");
   - you may not use this file except in compliance with the License.
   - You may obtain a copy of the License at
   -
   -     http://www.apache.org/licenses/LICENSE-2.0
   -
   - Unless required by applicable law or agreed to in writing, software
   - distributed under the License is distributed on an "AS IS" BASIS,
   - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   - See the License for the specific language governing permissions and
   - limitations under the License.
   -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/qrcode"
        android:title="@string/scan_qr_code" />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new_account"
        android:title="@string/add_token" />
    <item
        android:icon="@drawable/ic_import"
        android:title="@string/import_text">
        <menu>
            <item
                android:id="@+id/action_import_json"
                android:title="@string/import_json_format" />
            <item
                android:id="@+id/action_import_key_uri"
                android:title="@string/import_key_uri_format" />
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_export"
        android:title="@string/export_text">
        <menu>
            <item
                android:id="@+id/action_export_json"
                android:title="@string/export_json_format" />
            <item
                android:id="@+id/action_export_key_uri"
                android:title="@string/export_key_uri_format" />
        </menu>
    </item>
    <item
        android:id="@+id/use_dark_theme"
        android:title="@string/use_dark_theme"
        android:checkable="true"/>
    <item
        android:id="@+id/copy_to_clipboard"
        android:title="@string/copy_to_clipboard"
        android:checkable="true"/>
    <item
        android:id="@+id/require_authentication"
        android:title="@string/require_authentication"
        android:checkable="true"/>
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about_freeotp" />
    <item
        android:id="@+id/quit_and_lock"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/quit_and_lock"
        app:showAsAction="ifRoom" />
</menu>
