<?xml version="1.0" encoding="utf-8"?>
<!--
   - FreeOTP
   -
   - Authors: Nathaniel McCallum <npmccallum@redhat.com>
   -
   - Copyright (C) 2013  Nathaniel McCallum, Red Hat
   -
   - Licensed under the Apache License, Version 2.0 (the "License");
   - you may not use this file except in compliance with the License.
   - You may obtain a copy of the License at
   -
   -     http://www.apache.org/licenses/LICENSE-2.0
   -
   - Unless required by applicable law or agreed to in writing, software
   - distributed under the License is distributed on an "AS IS" BASIS,
   - WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   - See the License for the specific language governing permissions and
   - limitations under the License.
   -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:orientation="vertical">
        <include layout="@layout/metadata" />

        <TextView
            android:id="@+id/token_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/token_details"/>
        <TextView
            android:id="@+id/algorithm_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/algorithm"/>
        <TextView
            android:id="@+id/algorithm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textIsSelectable="true"
            android:focusable="true"
            android:focusableInTouchMode="true" />
        <TextView
            android:id="@+id/digits_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/digits"/>
        <TextView
            android:id="@+id/digits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textIsSelectable="true"
            android:focusable="true"
            android:focusableInTouchMode="true" />
        <TextView
            android:id="@+id/secret_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/secret"/>
        <TextView
            android:id="@+id/secret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textIsSelectable="true"
            android:focusable="true"
            android:focusableInTouchMode="true" />
        <TextView
            android:id="@+id/interval_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/interval"/>
        <TextView
            android:id="@+id/interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textIsSelectable="true"
            android:focusable="true"
            android:focusableInTouchMode="true" />
        <Button
            android:id="@+id/remove_user_token_image"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/remove_user_token_image" />
        <Button
            android:id="@+id/restore"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:enabled="false"
            android:text="@string/restore_defaults" />
    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout style="@style/DialogButtonLayout">
        <Button
            android:id="@+id/cancel"
            style="@style/DialogButton"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/save"
            style="@style/DialogButton"
            android:enabled="false"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>
